web/app/themes/frogspark/scss/src/styles.scss
@import "variables";
@import 'node_modules/bootstrap/scss/bootstrap.scss';
@import 'node_modules/aos/src/sass/aos.scss';
@import 'node_modules/slick-carousel/slick/slick.scss';
@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
@import 'node_modules/@fortawesome/fontawesome-free/scss/regular.scss';
@import 'node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
@import 'node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
@import 'mixins';

